--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn-lock
+yarn.lock
 lerna-debug.log*
 .pnpm-debug.log*
 
@@ -185,3 +186,4 @@ dist
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node,yarn
+yarn.lock
