--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "author": "Loid",
   "license": "GPL-3.0",
   "dependencies": {
+    "@prisma/client": "^4.1.1",
+    "discord.js": "^14.1.2",
+    "dotenv": "^16.0.1",
+    "glob": "7.2.0"
+  },
+  "devDependencies": {
     "@types/glob": "7.2.0",
     "@types/node": "^18.6.4",
     "@types/nodemon": "^1.19.2",
-    "discord.js": "^14.1.2",
-    "dotenv": "^16.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
-    "glob": "7.2.0",
     "nodemon": "^2.0.19",
+    "prisma": "^4.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0"
   },
   "scripts": {
     "start": "node build/index.js",
